--- a/TRNApp/index.html
+++ b/TRNApp/index.html
@@ -203,7 +203,9 @@
 
                       <div class="container" id="future-games-tab">
                       </div>
-
+                      <br />
+                      <br />
+                      <br />
                   </div>
               </div>
           </div>
@@ -250,24 +252,25 @@
                       </p>
                   </div>
 
-                  <form action="#" autocomplete="off">
-                      <fieldset>
-                          <input id="username" type="text" name="username" required>
-                          <label for="username">Username</label>
-                          <div class="after"></div>
-                      </fieldset>
-                      <fieldset>
-                          <input id="password" type="text" name="password" required>
-                          <label for="password">Body</label>
-                          <div class="after"></div>
-                      </fieldset>
-                      <fieldset>
-                          <button id="SubmitLogin">Submit</button>
-                      </fieldset>
-                  </form>
-
+                  <div class="text-center col-8">
+                      <h2 class="mb-4 tm-section-title">Pieslēgties sistēmai</h2>
+                      <form action="#" autocomplete="off">
+                          <fieldset>
+                              <input id="username" type="text" name="username" required>
+                              <label for="username">Username</label>
+                              <div class="after"></div>
+                          </fieldset>
+                          <fieldset>
+                              <input id="password" type="password" name="password" required>
+                              <label for="password">Password</label>
+                              <div class="after"></div>
+                          </fieldset>
+                          <fieldset>
+                              <button id="SubmitLogin">Submit</button>
+                          </fieldset>
+                      </form>
+                  </div>
               </div>
-          </div>
 
 
       <script src="Assets/js/jquery-1.9.1.min.js"></script>
